# bitfuel-cli

./: Cargo.toml  README.md  deploy.sh  index.js  package-lock.json  package.json
ci/: install.sh
commands/: get.js  getToken.js  login.js  save.js
src/: check_login.rs  describe.rs  get.rs  invoke.rs  login.rs  main.rs  recall.rs  run.rs  save.rs
