[package]
name = "bashfull"
version = "0.1.2"
edition = "2021"
description = "never forget a bash command again"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
